--- a/index.html
+++ b/index.html
@@ -22,12 +22,14 @@
     <link rel="stylesheet" href="css/icomoon.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+    <!-- <link rel="shortcut icon" type="image/png" href="images/{{}}"> -->
   </head>
   <body>
     
 	  <nav class="navbar px-md-0 navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 	    <div class="container">
-	      <a class="navbar-brand" href="index.html">JM Kalia<span>And Company</span></a>
+	      <a class="navbar-brand" href="index.html"><!--JM Kalia<span>And Company</span>--><img src="images/final.png" style="width: 125px; height: 115px;"></a>
 	      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 	        <span class="oi oi-menu"></span> Menu
 	      </button>
@@ -35,11 +37,11 @@
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav ml-auto">
 	          <li class="nav-item active"><a href="index.html" class="nav-link">Home</a></li>
-	          <li class="nav-item"><a href="#" class="nav-link">About</a></li>
-	          <li class="nav-item"><a href="#" class="nav-link">Attorneys</a></li>
-	          <li class="nav-item"><a href="#" class="nav-link">Practice Areas</a></li>
-	          <li class="nav-item"><a href="#" class="nav-link">Case Studies</a></li>
-	          <li class="nav-item"><a href="#" class="nav-link">Blog</a></li>
+	          <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
+	          <li class="nav-item"><a href="attorneys.html" class="nav-link">Attorneys</a></li>
+	          <li class="nav-item"><a href="practice-areas.html" class="nav-link">Practice Areas</a></li>
+	          <!-- <li class="nav-item"><a href="#" class="nav-link">Case Studies</a></li>
+	          <li class="nav-item"><a href="#" class="nav-link">Blog</a></li> -->
 	          <li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
 	          <li class="nav-item cta"><a href="#" class="nav-link">Free Consultation</a></li>
 	        </ul>
@@ -63,7 +65,7 @@
 						</h1>
             <!-- <h1 class="mb-4">Attorneys Fighting For Your Freedom</h1> -->
             <p class="mb-4">We have helped thousands of people to get relief from nation-wide fights and wrongful denials. They now trust our firm for all their legal requirements</p>
-            <p><a href="#" class="btn btn-primary mr-md-4 py-2 px-4">Get Legal Advice <span class="ion-ios-arrow-forward"></span></a></p>
+            <p><a href="contact.html" class="btn btn-primary mr-md-4 py-2 px-4">Get Legal Advice <span class="ion-ios-arrow-forward"></span></a></p>
           </div>
         </div>
       </div>
@@ -77,7 +79,7 @@
 	          	<span class="subheading">Services</span>
 	            <h2 class="mb-4">Why Choose Us?</h2>
 	            <p>Our utmost priority is to provide the clients with best legal services and advices, excellent client service and create an unbeatable approach to address the legal issues of our clients.</p>
-	            <p><a href="#" class="btn btn-primary py-3 px-4">Free Consultation</a></p>
+	            <p><a href="contact.html" class="btn btn-primary py-3 px-4">Free Consultation</a></p>
 	          </div>
     			</div>
     			<div class="col-lg-9 services-wrap px-4 pt-5">
@@ -185,9 +187,9 @@
         			<div class="icon d-flex justify-content-center align-items-center">
         				<span class="flaticon-family"></span>
         			</div>
-        			<h3>Family Law</a></h3>
+        			<h3>Family Law</h3>
         			<p>We provide best family matter advices with the promise of keeping things between the client and lawyer.</p>
-        			<a href="#" class="btn-custom d-flex align-items-center justify-content-center"><span class="ion-ios-arrow-round-forward"></span></a>
+        			<a href="practice_family.html" class="btn-custom d-flex align-items-center justify-content-center"><span class="ion-ios-arrow-round-forward"></span></a>
         		</div>
         	</div>
         	<div class="col-md-3 text-center">
@@ -197,7 +199,7 @@
         			</div>
         			<h3>Business Law</h3>
         			<p>We provide the best advisory relating to day to day business, regulatory issues and governance affairs</p>
-        			<a href="#" class="btn-custom d-flex align-items-center justify-content-center"><span class="ion-ios-arrow-round-forward"></span></a>
+        			<a href="practice_business.html" class="btn-custom d-flex align-items-center justify-content-center"><span class="ion-ios-arrow-round-forward"></span></a>
         		</div>
         	</div>
         	<div class="col-md-3 text-center">
@@ -207,7 +209,7 @@
         			</div>
         			<h3>Insurance Law</h3>
         			<p>Our team specializes in this field and knows every loophole that is used by the companies to bar people from their money.</p>
-        			<a href="#" class="btn-custom d-flex align-items-center justify-content-center"><span class="ion-ios-arrow-round-forward"></span></a>
+        			<a href="practice_insurance.html" class="btn-custom d-flex align-items-center justify-content-center"><span class="ion-ios-arrow-round-forward"></span></a>
         		</div>
         	</div>
         	<div class="col-md-3 text-center">
@@ -217,7 +219,7 @@
         			</div>
         			<h3>Criminal Law</h3>
         			<p>Criminal law is a official activity to authenticate the fact of commission of a crime and authorizes punitive treatment</p>
-        			<a href="#" class="btn-custom d-flex align-items-center justify-content-center"><span class="ion-ios-arrow-round-forward"></span></a>
+        			<a href="practice_criminal.html" class="btn-custom d-flex align-items-center justify-content-center"><span class="ion-ios-arrow-round-forward"></span></a>
         		</div>
         	</div>
         	<div class="col-md-3 text-center">
@@ -227,7 +229,7 @@
         			</div>
         			<h3>Property Law</h3>
         			<p>Our lawyers can be trusted to get sound advice on purchase, lease or license of property for various purposes.</p>
-        			<a href="#" class="btn-custom d-flex align-items-center justify-content-center"><span class="ion-ios-arrow-round-forward"></span></a>
+        			<a href="practice_property.html" class="btn-custom d-flex align-items-center justify-content-center"><span class="ion-ios-arrow-round-forward"></span></a>
         		</div>
         	</div>
         	<div class="col-md-3 text-center">
@@ -237,7 +239,7 @@
         			</div>
         			<h3>Employment Law</h3>
         			<p>Our teams are able in advising clients on the rules that need to be followed by companies doing business in India.</p>
-        			<a href="#" class="btn-custom d-flex align-items-center justify-content-center"><span class="ion-ios-arrow-round-forward"></span></a>
+        			<a href="practice_employment.html" class="btn-custom d-flex align-items-center justify-content-center"><span class="ion-ios-arrow-round-forward"></span></a>
         		</div>
         	</div>
         	<div class="col-md-3 text-center">
@@ -247,7 +249,7 @@
         			</div>
         			<h3>Fire Accident</h3>
         			<p>We investigate your case to determine the cause of the fire. Our firm brings experience and resources to your case.</p>
-        			<a href="#" class="btn-custom d-flex align-items-center justify-content-center"><span class="ion-ios-arrow-round-forward"></span></a>
+        			<a href="practice_fire.html" class="btn-custom d-flex align-items-center justify-content-center"><span class="ion-ios-arrow-round-forward"></span></a>
         		</div>
         	</div>
         	<div class="col-md-3 text-center">
@@ -257,7 +259,7 @@
         			</div>
         			<h3>Financial Law</h3>
         			<p>We provide best advices for commercial banking, capital markets and investment management sectors.</p>
-        			<a href="#" class="btn-custom d-flex align-items-center justify-content-center"><span class="ion-ios-arrow-round-forward"></span></a>
+        			<a href="practice_financial.html" class="btn-custom d-flex align-items-center justify-content-center"><span class="ion-ios-arrow-round-forward"></span></a>
         		</div>
         	</div>
         </div>
@@ -350,6 +352,8 @@
         </div>
     	</div>
     </section>
+
+    
 		
 
 		<section class="ftco-consultation ftco-section ftco-no-pt ftco-no-pb img" style="background-image: url(images/end2.png);">
@@ -359,18 +363,18 @@
     			<div class="col-md-6 half p-3 py-5 pl-md-5 ftco-animate heading-section heading-section-white">
     				<span class="subheading">Book an Appointment</span>
     				<h2 class="mb-4" style="color: #420d0d;">Free Consultation</h2>
-    				<form action="#" class="consultation">
+    		<form action="form.php" method="POST" class="consultation">
 	            <div class="form-group">
-	              <input type="text" class="form-control" placeholder="Your Name">
+	              <input type="text" class="form-control" placeholder="Your Name" name="name">
 	            </div>
 	            <div class="form-group">
-	              <input type="text" class="form-control" placeholder="Your Email">
+	              <input type="text" class="form-control" placeholder="Your Email" name="email">
 	            </div>
 	            <div class="form-group">
-	              <input type="text" class="form-control" placeholder="Subject">
+	              <input type="text" class="form-control" placeholder="Subject" name="subject">
 	            </div>
 	            <div class="form-group">
-	              <textarea name="" id="" cols="30" rows="7" class="form-control" placeholder="Message"></textarea>
+	              <textarea name="" id="" cols="30" rows="7" class="form-control" placeholder="Message"></textarea name="message">
 	            </div>
 	            <div class="form-group">
 	              <input style="background-color: #420d0d; opacity: 0.7; border: none;" type="submit" value="Send message" class="btn btn-dark py-3 px-4">
@@ -402,14 +406,14 @@
             <div class="ftco-footer-widget mb-4 ml-md-5">
               <h2 class="ftco-heading-2">Practice Areas</h2>
               <ul class="list-unstyled">
-                <li><a href="#" class="py-1 d-block"><span class="ion-ios-arrow-forward mr-3"></span>Family Law</a></li>
-                <li><a href="#" class="py-1 d-block"><span class="ion-ios-arrow-forward mr-3"></span>Business Law</a></li>
-                <li><a href="#" class="py-1 d-block"><span class="ion-ios-arrow-forward mr-3"></span>Insurance Law</a></li>
-                <li><a href="#" class="py-1 d-block"><span class="ion-ios-arrow-forward mr-3"></span>Criminal Law</a></li>
-                <li><a href="#" class="py-1 d-block"><span class="ion-ios-arrow-forward mr-3"></span>Drug Offenses</a></li>
-                <li><a href="#" class="py-1 d-block"><span class="ion-ios-arrow-forward mr-3"></span>Fire Accident</a></li>
-                <li><a href="#" class="py-1 d-block"><span class="ion-ios-arrow-forward mr-3"></span>Employment Law</a></li>
-                <li><a href="#" class="py-1 d-block"><span class="ion-ios-arrow-forward mr-3"></span>Property Law</a></li>
+                <li><a href="practice_family.html" class="py-1 d-block"><span class="ion-ios-arrow-forward mr-3"></span>Family Law</a></li>
+                <li><a href="practice_business.html" class="py-1 d-block"><span class="ion-ios-arrow-forward mr-3"></span>Business Law</a></li>
+                <li><a href="practice_insurance.html" class="py-1 d-block"><span class="ion-ios-arrow-forward mr-3"></span>Insurance Law</a></li>
+                <li><a href="practice_criminal.html" class="py-1 d-block"><span class="ion-ios-arrow-forward mr-3"></span>Criminal Law</a></li>
+                <li><a href="practice_financial.html" class="py-1 d-block"><span class="ion-ios-arrow-forward mr-3"></span>Financial Law</a></li>
+                <li><a href="practice_fire.html" class="py-1 d-block"><span class="ion-ios-arrow-forward mr-3"></span>Fire Accident</a></li>
+                <li><a href="practice_employment.html" class="py-1 d-block"><span class="ion-ios-arrow-forward mr-3"></span>Employment Law</a></li>
+                <li><a href="practice_property.html" class="py-1 d-block"><span class="ion-ios-arrow-forward mr-3"></span>Property Law</a></li>
 
               </ul>
             </div>
