--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
     			<div class="col-md-6 half p-3 py-5 pl-md-5 ftco-animate heading-section heading-section-white">
     				<span class="subheading">Book an Appointment</span>
     				<h2 class="mb-4" style="color: #420d0d;">Free Consultation</h2>
-    		<form action="form.php" method="POST" class="consultation">
+    		<form action="form.php" method="POST" class="consultation" data-netlify="true">
 	            <div class="form-group">
 	              <input type="text" class="form-control" placeholder="Your Name" name="name">
 	            </div>
